--- a/cars/index.html
+++ b/cars/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><img class="rounded img-fluid" src="assets/img/cars/IC-1.jpg"></div>
+                            <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/IC-1.jpg"></div>
                             <div class="col-lg-7">
                                 <h3>2018</h3>
                                 <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
@@ -73,7 +73,7 @@
                         <div class="row">
                             <div class="col-lg-5"><img class="rounded img-fluid" src="assets/img/tech/image4.jpg"></div>
                             <div class="col-lg-7">
-                                <h3>2017</h3>
+                                <h3>2016</h3>
                                 <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis
                                     vitae leo.</p>
