--- a/cars/index.html
+++ b/cars/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/2018_1.jpg"></div>
+                            <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/2018.jpg"></div>
                             <div class="col-lg-7">
                                 <h3>2018</h3>
                                 <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
