--- a/about-us/index.html
+++ b/about-us/index.html
@@ -5,34 +5,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>About Us - Brand</title>
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="assets/img/fsae-logo-white.svg">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous">
-    <link rel="stylesheet" href="assets/css/Dark-footer-with-social-media-icons.css">
+    <link rel="stylesheet" href="/assets/css/Dark-footer-with-social-media-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/smoothproducts.css">
-    <link rel="stylesheet" href="assets/css/Social-Icon--hover-effect.css">
+    <link rel="stylesheet" href="/assets/css/smoothproducts.css">
+    <link rel="stylesheet" href="/assets/css/Social-Icon--hover-effect.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="background-color: rgb(255,255,255);background-image: url(&quot;assets/img/beautiful-color-ui-gradients-backgrounds-royal.png&quot;);opacity: 1;background-size: cover;background-position: center;">
-        <div class="container"><a class="navbar-brand logo" href="index.html" style="font-family: 'Fjalla One', sans-serif;font-size: 19px;color: rgb(207,207,207);padding-top: 0px;padding-bottom: 0px;margin-right: 0px;padding-left: 11px;">Columbia FSAE</a><button data-toggle="collapse"
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="background-color: rgb(255,255,255);background-image: url(&quot;/assets/img/beautiful-color-ui-gradients-backgrounds-royal.png&quot;);opacity: 1;background-size: cover;background-position: center;">
+        <div class="container"><a class="navbar-brand logo" href="/index.html" style="font-family: 'Fjalla One', sans-serif;font-size: 19px;color: rgb(207,207,207);padding-top: 0px;padding-bottom: 0px;margin-right: 0px;padding-left: 11px;">Columbia FSAE</a><button data-toggle="collapse"
                 class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html" style="color: #e1e1e1;">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="about-us.html" style="color: #e1e1e1;">ABOUT</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="cars.html" style="color: #e1e1e1;">CARS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/index.html" style="color: #e1e1e1;">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/about-us/index.html" style="color: #e1e1e1;">ABOUT</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/cars/index.html" style="color: #e1e1e1;">CARS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="sponsors.html" style="color: #e1e1e1;">SPONSORS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light" href="join.html">JOIN</a></li>
                 </ul>
@@ -42,35 +42,35 @@
     <main class="page">
         <section class="clean-block about-us">
             <div class="container">
-                <div data-aos="fade" data-aos-duration="1000" class="block-heading"><img src="assets/img/clip-5.png" style="width: 60%;margin-top: -7%;">
+                <div data-aos="fade" data-aos-duration="1000" class="block-heading"><img src="/assets/img/clip-5.png" style="width: 60%;margin-top: -7%;">
                     <h2 class="text-body" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 5%;margin-top: 1%;">What can you do in FSAE?</h2>
                     <p><strong>Formula SAE</strong>&nbsp;(Society of Automotive Engineers)&nbsp;is a series of international competitions in which university teams compete to design and manufacture the best performing racecars.</p>
                 </div>
             </div>
             <div class="container-fluid text-center" data-aos="fade" data-aos-duration="1000" style="padding-bottom: 50px;">
-                <figure class="figure" style="margin-right: 40px;"><img class="img-fluid figure-img" src="assets/img/icons8-steering_wheel.png">
+                <figure class="figure" style="margin-right: 40px;"><img class="img-fluid figure-img" src="/assets/img/icons8-steering_wheel.png">
                     <figcaption class="figure-caption"><strong>Controls</strong></figcaption>
                     <figcaption class="figure-caption" style="width: 200px;">Assesses the team's ability to compile a business case arguing that their car best serves the needs of the amateur racing market.</figcaption>
                 </figure>
-                <figure class="figure" style="padding-right: 0px;padding-left: 0px;margin-right: 40px;"><img class="img-fluid figure-img" src="assets/img/icons8-f1_race_car_top_veiw.png" style="margin-right: -3px;padding-left: 0px;">
+                <figure class="figure" style="padding-right: 0px;padding-left: 0px;margin-right: 40px;"><img class="img-fluid figure-img" src="/assets/img/icons8-f1_race_car_top_veiw.png" style="margin-right: -3px;padding-left: 0px;">
                     <figcaption class="figure-caption" style="padding-left: 0px;"><strong>Dynamics</strong></figcaption>
                     <figcaption class="figure-caption" style="padding-left: 0px;width: 200px;">Assesses the team's ability to compile a business case arguing that their car best serves the needs of the amateur racing market.</figcaption>
                 </figure>
-                <figure class="figure" style="padding-left: 0px;"><img class="img-fluid figure-img" src="assets/img/icons8-washer_fluid.png" style="padding-left: 0px;">
+                <figure class="figure" style="padding-left: 0px;"><img class="img-fluid figure-img" src="/assets/img/icons8-washer_fluid.png" style="padding-left: 0px;">
                     <figcaption class="figure-caption" style="padding-left: 0px;"><strong>Fluids</strong></figcaption>
                     <figcaption class="figure-caption" style="padding-left: 0px;width: 200px;">Assesses the team's ability to compile a business case arguing that their car best serves the needs of the amateur racing market.</figcaption>
                 </figure>
             </div>
             <div class="container-fluid text-center" data-aos="fade" data-aos-duration="1000" data-aos-delay="200" style="padding-bottom: 100px;">
-                <figure class="figure" style="margin-right: 40px;"><img class="img-fluid figure-img" src="assets/img/icons8-recharge_battery.png">
+                <figure class="figure" style="margin-right: 40px;"><img class="img-fluid figure-img" src="/assets/img/icons8-recharge_battery.png">
                     <figcaption class="figure-caption"><strong>High Voltage</strong></figcaption>
                     <figcaption class="figure-caption" style="width: 200px;">Assesses the team's ability to compile a business case arguing that their car best serves the needs of the amateur racing market.</figcaption>
                 </figure>
-                <figure class="figure" style="padding-right: 0px;padding-left: 0px;margin-right: 40px;"><img class="img-fluid figure-img" src="assets/img/icons8-electronics.png" style="margin-right: -3px;padding-left: 0px;">
+                <figure class="figure" style="padding-right: 0px;padding-left: 0px;margin-right: 40px;"><img class="img-fluid figure-img" src="/assets/img/icons8-electronics.png" style="margin-right: -3px;padding-left: 0px;">
                     <figcaption class="figure-caption" style="padding-left: 0px;"><strong>Low Voltage</strong></figcaption>
                     <figcaption class="figure-caption" style="padding-left: 0px;width: 200px;">Assesses the team's ability to compile a business case arguing that their car best serves the needs of the amateur racing market.</figcaption>
                 </figure>
-                <figure class="figure" style="padding-left: 0px;"><img class="img-fluid figure-img" src="assets/img/icons8-business.png" style="padding-left: 0px;">
+                <figure class="figure" style="padding-left: 0px;"><img class="img-fluid figure-img" src="/assets/img/icons8-business.png" style="padding-left: 0px;">
                     <figcaption class="figure-caption" style="padding-left: 0px;"><strong>Business</strong></figcaption>
                     <figcaption class="figure-caption" style="padding-left: 0px;width: 200px;">Assesses the team's ability to compile a business case arguing that their car best serves the needs of the amateur racing market.</figcaption>
                 </figure>
@@ -79,7 +79,7 @@
                 <section></section>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="avatars/avatar1.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Albert_Tai.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title">Albert Tai</h4>
                                 <p class="card-text">Chief Mechanical Engineer</p>
@@ -87,15 +87,15 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="avatars/avatar1.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Bert_Steyart.JPG">
                             <div class="card-body info">
-                                <h4 class="card-title"><strong>Bert&nbsp;Steyaert</strong></h4>
+                                <h4 class="card-title">Bert Steyaert</h4>
                                 <p class="card-text">Chief Electrical Engineer</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="avatars/avatar2.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Ara_Peterson.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title">Ara Peterson</h4>
                                 <p class="card-text">President</p>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="avatars/avatar3.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Andrew_Chuka.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title">Andrew Chuka</h4>
                                 <p class="card-text">&nbsp;Assistant Chief of Dynamics</p>
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="avatars/avatar3.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Jon_Katz.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title">Jon Katz</h4>
                                 <p class="card-text">Assistant Chief of Fluids</p>
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="avatars/avatar3.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Saul_Partida.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title">Saul Partida</h4>
                                 <p class="card-text">Assistant Chief, Low Voltage</p>
@@ -131,7 +131,7 @@
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="avatars/avatar3.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Kat_Chen.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title">Kat Chen</h4>
                                 <p class="card-text">VP, Internal Affairs</p>
@@ -139,7 +139,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="avatars/avatar3.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/James_Van_Hess.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title">James Van Hess</h4>
                                 <p class="card-text">VP, External Affairs</p>
@@ -147,7 +147,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="avatars/avatar3.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Danielle_Cai.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title">Danielle Cai</h4>
                                 <p class="card-text">Secretary</p>
@@ -157,7 +157,7 @@
                 </div>
                 <div class="row" data-aos="fade" data-aos-duration="1000" style="width: 90%;margin-left: 5%;">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="avatars/avatar3.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Matthew_Groll.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title">Matthew Groll</h4>
                                 <p class="card-text">MechE Treasurer</p>
@@ -165,7 +165,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="avatars/avatar3.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Daniel_Halmos.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title">Daniel Halmos</h4>
                                 <p class="card-text">EE Treasurer</p>
@@ -173,7 +173,7 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4" data-aos="fade">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="avatars/avatar3.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="/assets/img/headshots/Sophia_Ladyzhets.JPG">
                             <div class="card-body info">
                                 <h4 class="card-title">Sophia Ladyzhets</h4>
                                 <p class="card-text">Social Chair</p>
