--- a/about-us.html
+++ b/about-us.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>About Us - Brand</title>
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -30,11 +30,11 @@
                 class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="index.html" style="color: #e1e1e1;">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="about-us.html" style="color: #e1e1e1;">ABOUT</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="cars.html" style="color: #e1e1e1;">CARS</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="sponsors.html" style="color: #e1e1e1;">SPONSORS</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link text-light" href="join.html">JOIN</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/index.html" style="color: #e1e1e1;">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/about-us.html" style="color: #e1e1e1;">ABOUT</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/cars/index.html" style="color: #e1e1e1;">CARS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/sponsors.html" style="color: #e1e1e1;">SPONSORS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/join.html">JOIN</a></li>
                 </ul>
             </div>
         </div>
