--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <section class="text-primary clean-block slider dark"></section>
     </main>
     <footer class="page-footer dark" style="padding-bottom: 3px;">
-        <div class="container text-center d-flex float-none justify-content-sm-center align-items-sm-center" style="margin-bottom: -23px;"><a class="border-dark social-link" href="#" style="margin: 0px 5px;"><i class="fa fa-facebook social-link-icon"></i></a><a class="border-dark social-link" href="#" style="margin: 0px 5px;"><i class="fa fa-twitter social-link-icon"></i></a><a class="border-dark social-link"
+        <div class="container text-center d-flex float-none justify-content-sm-center align-items-sm-center" style="margin-bottom: -23px;"><a class="border-dark social-link" href="#" style="margin: 0px 5px;"><i class="fa fa-facebook social-link-icon"></i></a></a><a class="border-dark social-link"
                 href="#" style="margin: 0px 5px;"><i class="fa fa-instagram social-link-icon"></i></a></div>
         <div class="footer-copyright">
             <p>© 2019 Copyright Columbia University FSAE</p>
