--- a/join.html
+++ b/join.html
@@ -94,7 +94,7 @@
             </div><img class="img-fluid d-lg-flex" data-aos="fade" data-aos-duration="1000" src="assets/img/clip-no-messages.png" style="width: 45%;margin-left: 5%;margin-top: -1%;margin-bottom: -5%;"></section>
     </main>
     <footer class="page-footer dark" style="padding-bottom: 3px;">
-        <div class="container text-center d-flex float-none justify-content-sm-center align-items-sm-center" style="margin-bottom: -23px;"></a><a class="border-dark social-link"
+        <div class="container text-center d-flex float-none justify-content-sm-center align-items-sm-center" style="margin-bottom: -23px;"><a class="border-dark social-link" href="#" style="margin: 0px 5px;"><i class="fa fa-facebook social-link-icon"></i></a><a class="border-dark social-link"
                 href="#" style="margin: 0px 5px;"><i class="fa fa-instagram social-link-icon"></i></a></div>
         <div class="footer-copyright">
             <p>© 2019 Copyright Columbia University FSAE</p>
