--- a/join.html
+++ b/join.html
@@ -5,23 +5,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Contact Us - Brand</title>
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="assets/img/fsae-logo-white.svg">
-    <link rel="icon" type="image/svg+xml" sizes="640x460" href="assets/img/fsae-logo-white.svg">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous">
-    <link rel="stylesheet" href="assets/css/Dark-footer-with-social-media-icons.css">
+    <link rel="stylesheet" href="/assets/css/Dark-footer-with-social-media-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/smoothproducts.css">
-    <link rel="stylesheet" href="assets/css/Social-Icon--hover-effect.css">
+    <link rel="stylesheet" href="/assets/css/smoothproducts.css">
+    <link rel="stylesheet" href="/assets/css/Social-Icon--hover-effect.css">
 </head>
 
 <body>
@@ -31,8 +31,8 @@
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/index.html" style="color: #e1e1e1;">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/about-us.html" style="color: #e1e1e1;">ABOUT</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/cars/index.html" style="color: #e1e1e1;">CARS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/about-us/" style="color: #e1e1e1;">ABOUT</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/sponsors.html" style="color: #e1e1e1;">SPONSORS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="/join.html">JOIN</a></li>
                 </ul>
@@ -100,12 +100,12 @@
             <p>© 2019 Copyright Columbia University FSAE</p>
         </div>
     </footer>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
-    <script src="assets/js/smoothproducts.min.js"></script>
-    <script src="assets/js/theme.js"></script>
-    <script src="assets/js/bs-animation.js"></script>
+    <script src="/assets/js/smoothproducts.min.js"></script>
+    <script src="/assets/js/theme.js"></script>
+    <script src="/assets/js/bs-animation.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
 </body>
 
