--- a/join/index.html
+++ b/join/index.html
@@ -33,8 +33,8 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/index.html" style="color: #e1e1e1;">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/about-us/" style="color: #e1e1e1;">ABOUT</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/sponsors.html" style="color: #e1e1e1;">SPONSORS</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="/join.html">JOIN</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/sponsors/" style="color: #e1e1e1;">SPONSORS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-light active" href="/join/">JOIN</a></li>
                 </ul>
             </div>
         </div>
