--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Gallery - Brand</title>
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="icon" type="image/svg+xml" sizes="640x460" href="/assets/img/fsae-logo-white.svg">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+    <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fjalla+One">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Righteous">
+    <link rel="stylesheet" href="/assets/css/Dark-footer-with-social-media-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
+    <link rel="stylesheet" href="/assets/css/smoothproducts.css">
+    <link rel="stylesheet" href="/assets/css/Social-Icon--hover-effect.css">
+</head>
+
+<body>
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="background-color: rgb(255,255,255);background-image: url(&quot;assets/img/beautiful-color-ui-gradients-backgrounds-royal.png&quot;);opacity: 1;background-size: cover;background-position: center;">
+        <div class="container"><a class="navbar-brand logo" href="index.html" style="font-family: 'Fjalla One', sans-serif;font-size: 19px;color: rgb(207,207,207);padding-top: 0px;padding-bottom: 0px;margin-right: 0px;padding-left: 11px;">Columbia FSAE</a><button data-toggle="collapse"
+                class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/index.html" style="color: #e1e1e1;">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/about-us/" style="color: #e1e1e1;">ABOUT</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/sponsors/" style="color: #e1e1e1;">SPONSORS</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link text-light" href="/join/">JOIN</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <main class="page gallery-page">
+        <section class="clean-block clean-gallery dark">
+            <div class="container">
+                <div data-aos="fade" data-aos-duration="1000" class="block-heading">
+                    <h2 class="text-dark" style="color: rgb(43,48,51);">Sponsors</h2>
+                    <p>We couldn't have done this without these companies' generous support!</p>
+                </div>
+                <div class="row" data-aos="fade" data-aos-duration="1000" data-aos-delay="500">
+                    <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="/assets/img/scenery/image1.jpg"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/home-logo.png" style="background-color: rgba(255,255,255,0);"></a></div>
+                    <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.gurit.com/"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/gurit.svg" style="background-color: rgba(255,255,255,0);"></a></div>
+                    <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.arch.columbia.edu/"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/tag-columbia-gsapp.png" style="background-color: rgba(255,255,255,0);"></a></div>
+                    <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.trelleborg.com/en"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/Trelleborg-logo-5FF396A3DE-seeklogo.com.png" style="background-color: rgba(255,255,255,0);"></a></div>
+                    <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.tek.com/"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/tek-logo-dark.png" style="background-color: rgba(255,255,255,0);"></a></div>
+                    <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.deatschwerks.com/"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/DW_logo_short%2017-293x101.png" style="background-color: rgba(255,255,255,0);"></a></div>
+                    <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="http://www.pmfinishing.com/index.asp"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/g_pm_logo.gif" style="background-size: auto;background-position: center;padding-right: 41px;margin-right: -65px;margin-left: 50px;margin-top: 22px;"></a></div>
+                    <div
+                        class="col-md-6 col-lg-4 item"><a class="lightbox" href="/assets/img/scenery/image5.jpg"></a></div>
+                <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="/assets/img/scenery/image1.jpg"></a></div>
+            </div>
+            </div>
+        </section>
+    </main>
+    <footer class="page-footer dark" style="padding-bottom: 3px;">
+        <div class="container text-center d-flex float-none justify-content-sm-center align-items-sm-center" style="margin-bottom: -23px;"><a class="border-dark social-link" href="#" style="margin: 0px 5px;"><i class="fa fa-facebook social-link-icon"></i></a><a class="border-dark social-link"
+                href="#" style="margin: 0px 5px;"><i class="fa fa-instagram social-link-icon"></i></a></div>
+        <div class="footer-copyright">
+            <p>© 2019 Copyright Columbia University FSAE</p>
+        </div>
+    </footer>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+    <script src="/assets/js/smoothproducts.min.js"></script>
+    <script src="/assets/js/theme.js"></script>
+    <script src="/assets/js/bs-animation.js"></script>
+    <script src="/https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+</body>
+
+</html>
