--- a/about-us/index.html
+++ b/about-us/index.html
@@ -30,7 +30,7 @@
                 class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/index.html" style="color: #e1e1e1;">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/" style="color: #e1e1e1;">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="/about-us/" style="color: #e1e1e1;">ABOUT</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/sponsors/" style="color: #e1e1e1;">SPONSORS</a></li>
