--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -74,7 +74,7 @@
     <script src="/assets/js/smoothproducts.min.js"></script>
     <script src="/assets/js/theme.js"></script>
     <script src="/assets/js/bs-animation.js"></script>
-    <script src="/https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
 </body>
 
 </html>
