--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="background-color: rgb(255,255,255);background-image: url(&quot;assets/img/beautiful-color-ui-gradients-backgrounds-royal.png&quot;);opacity: 1;background-size: cover;background-position: center;">
-        <div class="container"><a class="navbar-brand logo" href="index.html" style="font-family: 'Fjalla One', sans-serif;font-size: 19px;color: rgb(207,207,207);padding-top: 0px;padding-bottom: 0px;margin-right: 0px;padding-left: 11px;">Columbia FSAE</a><button data-toggle="collapse"
+        <div class="container"><a class="navbar-brand logo" href="/" style="font-family: 'Fjalla One', sans-serif;font-size: 19px;color: rgb(207,207,207);padding-top: 0px;padding-bottom: 0px;margin-right: 0px;padding-left: 11px;">Columbia FSAE</a><button data-toggle="collapse"
                 class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
@@ -42,7 +42,8 @@
     <main class="page gallery-page">
         <section class="clean-block clean-gallery dark">
             <div class="container">
-                <div data-aos="fade" data-aos-duration="1000" class="block-heading">
+                <div data-
+                     ="fade" data-aos-duration="1000" class="block-heading">
                     <h2 class="text-dark" style="color: rgb(43,48,51);">Sponsors</h2>
                     <p>We couldn't have done this without these companies' generous support!</p>
                 </div>
