--- a/join/index.html
+++ b/join/index.html
@@ -26,11 +26,11 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="background-color: rgb(255,255,255);background-image: url(&quot;assets/img/beautiful-color-ui-gradients-backgrounds-royal.png&quot;);opacity: 1;background-size: cover;background-position: center;">
-        <div class="container"><a class="navbar-brand logo" href="index.html" style="font-family: 'Fjalla One', sans-serif;font-size: 19px;color: rgb(207,207,207);padding-top: 0px;padding-bottom: 0px;margin-right: 0px;padding-left: 11px;">Columbia FSAE</a><button data-toggle="collapse"
+        <div class="container"><a class="navbar-brand logo" href="/" style="font-family: 'Fjalla One', sans-serif;font-size: 19px;color: rgb(207,207,207);padding-top: 0px;padding-bottom: 0px;margin-right: 0px;padding-left: 11px;">Columbia FSAE</a><button data-toggle="collapse"
                 class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/.html" style="color: #e1e1e1;">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/" style="color: #e1e1e1;">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/about-us/" style="color: #e1e1e1;">ABOUT</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/cars/" style="color: #e1e1e1;">CARS</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="/sponsors/" style="color: #e1e1e1;">SPONSORS</a></li>
@@ -42,7 +42,7 @@
     <main class="page contact-us-page">
         <section class="clean-block clean-form dark" style="margin-top: -82px;">
             <div class="container">
-                <div class="block-heading" style="margin-top: -43px;"><img data-aos="fade" data-aos-duration="850" src="assets/img/61072811_10158062997343561_7260407403730960384_o.jpeg" style="width: 100%;padding-bottom: 50px;">
+                <div class="block-heading" style="margin-top: -43px;"><img data-aos="fade" data-aos-duration="850" src="/assets/img/61072811_10158062997343561_7260407403730960384_o.jpeg" style="width: 100%;padding-bottom: 50px;">
                     <p style="font-size: 16.5px;margin-bottom: 2%;">We are always looking for new members and sponsors! If you are interested in learning more about us or supporting our team, contact us below!</p>
                     <p style="font-size: 16.5px;">Visit us:&nbsp;</p>
                     <p>- Go to Mudd, take the stairs to the basement</p>
