--- a/cars/index.html
+++ b/cars/index.html
@@ -43,6 +43,44 @@
         <section class="clean-block clean-blog-list dark">
             <div class="container">
                 <div class="block-heading">
+                    <h2 class="text-dark">Current Cars</h2>
+                    <p>Each year, we dedicate ourselves to push the limits of performance and build the next generation of racecars. Explore our past vehicles below.<br></p>
+                </div>
+                <div class="block-content">
+                    <div class="clean-blog-post">
+                        <div class="row">
+                            <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/IC-1.jpg"></div>
+                            <div class="col-lg-7">
+                                <h3>2019</h3>
+                                <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis
+                                    vitae leo.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clean-blog-post">
+                        <div class="row">
+                            <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/2018.jpg"></div>
+                            <div class="col-lg-7">
+                                <h3>2018</h3>
+                                <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis
+                                    vitae leo.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clean-blog-post">
+                        <div class="row">
+                            <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/2016-2.jpg"></div>
+                            <div class="col-lg-7">
+                                <h3>2016</h3>
+                                <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis
+                                    vitae leo.</p>
+                            </div>
+                        </div>
+                    </div>
+                <div class="block-heading">
                     <h2 class="text-dark">Past Cars</h2>
                     <p>Each year, we dedicate ourselves to push the limits of performance and build the next generation of racecars. Explore our past vehicles below.<br></p>
                 </div>
