--- a/cars/index.html
+++ b/cars/index.html
@@ -80,6 +80,7 @@
                             </div>
                         </div>
                     </div>
+                </div>    
                 <div class="block-heading">
                     <h2 class="text-dark">Past Cars</h2>
                     <p>Each year, we dedicate ourselves to push the limits of performance and build the next generation of racecars. Explore our past vehicles below.<br></p>
