--- a/cars/index.html
+++ b/cars/index.html
@@ -51,7 +51,7 @@
                         <div class="row">
                             <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/IC-1.jpg"></div>
                             <div class="col-lg-7">
-                                <h3>2020 IC</h3>
+                                <h3>2020 EV</h3>
                                 <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis
                                     vitae leo.</p>
@@ -62,7 +62,7 @@
                         <div class="row">
                             <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/2018.jpg"></div>
                             <div class="col-lg-7">
-                                <h3>2018 EV</h3>
+                                <h3>2020 IC</h3>
                                 <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis
                                     vitae leo.</p>
@@ -72,7 +72,7 @@
                 </div>    
                 <div class="block-heading">
                     <h2 class="text-dark">Past Cars</h2>
-                    <p>Each year, we dedicate ourselves to push the limits of performance and build the next generation of racecars. Explore our past vehicles below.<br></p>
+                    
                 </div>
                 <div class="block-content">
                     <div class="clean-blog-post">
@@ -92,8 +92,7 @@
                             <div class="col-lg-7">
                                 <h3>2018</h3>
                                 <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis
-                                    vitae leo.</p>
+                                <p>Car No. 74</p>
                             </div>
                         </div>
                     </div>
