--- a/cars/index.html
+++ b/cars/index.html
@@ -81,8 +81,10 @@
                             <div class="col-lg-7">
                                 <h3>2019</h3>
                                 <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis
-                                    vitae leo.</p>
+                                <p>Overall Dimensions</p>
+                                <p>Length: 2875 mm</p>
+                                <p>Width: 1455 mm </p>
+                                <p>Height: 1099 mm</p>
                             </div>
                         </div>
                     </div>
