--- a/cars/index.html
+++ b/cars/index.html
@@ -80,11 +80,13 @@
                             <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/IC-1.jpg"></div>
                             <div class="col-lg-7">
                                 <h3>2019</h3>
-                                <div class="info"><span class="text-muted">Jan 16, 2018 by&nbsp;<a href="#">John Smith</a></span></div>
-                                <p>Overall Dimensions</p>
+                                <div class="info"></div>
+                                <p>Overall Dimensions:</p>
                                 <p>Length: 2875 mm</p>
                                 <p>Width: 1455 mm </p>
                                 <p>Height: 1099 mm</p>
+                                <p>Weight: 450 kg</p>
+                                <p>Weight Distribution: 45% front</p>
                             </div>
                         </div>
                     </div>
