--- a/cars/index.html
+++ b/cars/index.html
@@ -101,8 +101,12 @@
                             <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/2016-2.jpg"></div>
                             <div class="col-lg-7">
                                 <h3>2016</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis
-                                    vitae leo.</p>
+                                <p>Overall Dimensions:</p>
+                                <p>Length:2457 mm</p>
+                                <p>Width: 1435 mm</p>
+                                <p>Height: 1130 mm</p>
+                                <p>Weight: 214 kg</p>
+                                <p>Weight Distribution: 48% front </p>
                             </div>
                         </div>
                     </div>
