--- a/cars/index.html
+++ b/cars/index.html
@@ -92,6 +92,12 @@
                             <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/2018.jpg"></div>
                             <div class="col-lg-7">
                                 <h3>2018</h3>
+                                <p>Overall Dimensions:</p>
+                                <p>Length:2457 mm</p>
+                                <p>Width: 1435 mm</p>
+                                <p>Height: 1130 mm</p>
+                                <p>Weight: 214 kg</p>
+                                <p>Weight Distribution: 48% front </p>
                                 <p>Car No. 74</p>
                             </div>
                         </div>
@@ -101,7 +107,7 @@
                             <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/2016-2.jpg"></div>
                             <div class="col-lg-7">
                                 <h3>2016</h3>
-                                <p>Overall Dimensions:</p>
+                                <p>Overall Dimensions: THIS INFO IS WRONG</p>
                                 <p>Length:2457 mm</p>
                                 <p>Width: 1435 mm</p>
                                 <p>Height: 1130 mm</p>
