--- a/cars/index.html
+++ b/cars/index.html
@@ -49,7 +49,7 @@
                 <div class="block-content">
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/IC-1.jpg"></div>
+                            <div class="col-lg-5"><img class="rounded img-fluid" href="/cars/2020-EV" src="/assets/img/cars/IC-1.jpg"></div>
                             <div class="col-lg-7">
                                 <h3>2020 EV</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis
@@ -59,7 +59,7 @@
                     </div>
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/2018.jpg"></div>
+                            <div class="col-lg-5"><img class="rounded img-fluid" href="/cars/2020-IC" src="/assets/img/cars/2018.jpg"></div>
                             <div class="col-lg-7">
                                 <h3>2020 IC</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis
@@ -75,7 +75,7 @@
                 <div class="block-content">
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/IC-1.jpg"></div>
+                            <div class="col-lg-5"><img class="rounded img-fluid" href="/cars/2019" src="/assets/img/cars/IC-1.jpg"></div>
                             <div class="col-lg-7">
                                 <h3>2019</h3>
                                 <p>Overall Dimensions:</p>
@@ -89,7 +89,7 @@
                     </div>
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/2018.jpg"></div>
+                            <div class="col-lg-5"><img class="rounded img-fluid" href="/cars/2018"src="/assets/img/cars/2018.jpg"></div>
                             <div class="col-lg-7">
                                 <h3>2018</h3>
                                 <p>Overall Dimensions:</p>
@@ -103,7 +103,7 @@
                     </div>
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/2016-2.jpg"></div>
+                            <div class="col-lg-5"><img class="rounded img-fluid" href="/cars/2016" src="/assets/img/cars/2016-2.jpg"></div>
                             <div class="col-lg-7">
                                 <h3>2016</h3>
                                 <p>Overall Dimensions: THIS INFO IS WRONG</p>
