--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -55,7 +55,7 @@
                     <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.tek.com/"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/tek-logo-dark.png" style="background-color: rgba(255,255,255,0);"></a></div>
                     <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.deatschwerks.com/"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/DW_logo_short%2017-293x101.png" style="background-color: rgba(255,255,255,0);"></a></div>
                     <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="http://www.pmfinishing.com/index.asp"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/g_pm_logo.gif" style="background-size: auto;background-position: center;padding-right: 41px;margin-right: -65px;margin-left: 50px;margin-top: 22px;"></a></div>
-                    <!-- <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.altair.com/"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/sponsors/AltairEngineering_Logo.png" style="background-color: rgba(255,255,255,0);"></a></div> -->
+                    <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="https://www.altair.com/"><img class="img-thumbnail img-fluid border-light shadow-none image" src="/assets/img/sponsors/AltairEngineering_Logo.png" style="background-color: rgba(255,255,255,0);"></a></div>
                     <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="/assets/img/scenery/image5.jpg"></a></div>
                 <div class="col-md-6 col-lg-4 item"><a class="lightbox" href="/assets/img/scenery/image1.jpg"></a></div>
             </div>
