--- a/join/index.html
+++ b/join/index.html
@@ -62,7 +62,7 @@
 <div id="mc_embed_signup">
 <form action="https://columbia.us8.list-manage.com/subscribe/post?u=8f5b16d3f1298f4c5e2ab5005&amp;id=7298b99356" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<h2>Subscribe</h2>
+	<h2>Subscribe to our email list!</h2>
 <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 <div class="mc-field-group">
 	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
