--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                     <p style="margin-bottom: 3%;">Building excellent racecars every year takes a variety of skill sets, so there's a place for anyone and everyone on this team. We hope you can join us this year to give us your unique contribution</p>
                 </div>
                 <div class="row align-items-center" data-aos="fade" data-aos-duration="1200" data-aos-delay="200">
-                    <div class="col-md-6 text-muted"><img src="assets/img/clip-uploading.png" style="margin-left: 5%;width: 85%;"></div>
+                    
+                    <div class="col-lg-5"><img class="rounded img-fluid" src="/assets/img/cars/IC-1.jpg" style="margin-left: 5%; width: 85%;"></div>
                     <div class="col-md-6">
                         <h3>Mission</h3>
                         <div class="getting-started-info">
