--- a/about-us/index.html
+++ b/about-us/index.html
@@ -42,7 +42,7 @@
     <main class="page">
         <section class="clean-block about-us">
             <div class="container">
-                <div data-aos="fade" data-aos-duration="1000" class="block-heading"><img src="/assets/img/jvh.jpeg" style="width: 60%;margin-top: -7%;">
+                <div data-aos="fade" data-aos-duration="1000" class="block-heading"><img src="/assets/img/jvh.jpg" style="width: 60%;margin-top: -7%;">
                     <h2 class="text-body" style="color: rgb(36,59,83);padding-top: 15px;margin-bottom: 5%;margin-top: 1%;">What can you do in FSAE?</h2>
                     <p><strong>Formula SAE</strong>&nbsp;(Society of Automotive Engineers)&nbsp;is a series of international competitions in which university teams compete to design and manufacture the best performing racecars.</p>
                 </div>
