--- a/cars/index.html
+++ b/cars/index.html
@@ -69,7 +69,7 @@
                     </div>
                 </div>    
                 <div class="block-heading">
-                    <h2 class="text-dark">Past Cars</h2>
+                    <h2 class="text-dark">Our Past 3 Cars</h2>
                     
                 </div>
                 <div class="block-content">
